@@ -132,20 +132,24 @@ struct sctp_paramhdr {
 #define SCTP_GET_STAT_LOG		0x0000001d
 #define SCTP_CONNECT_X			0x0000001e	/* hidden opt for connectx */
 #define SCTP_RESET_STREAMS		0x0000001f
+#define SCTP_CONNECT_X_DELAYED		0x00000020	/* hidden opt for connectx_delayed 
+							 * part of sctp_sendx()
+							 */
+#define SCTP_CONNECT_X_COMPLETE         0x00000021
+#define SCTP_GET_ASOC_ID_LIST           0x00000022
+
+/* Other debug items */
+#define SCTP_GET_NONCE_VALUES           0x00000023
 
 /* Things for the AUTH draft possibly */
-#define SCTP_PEER_PUBLIC_KEY            0x00000020  /* get the peers public key */
-#define SCTP_MY_PUBLIC_KEY              0x00000021  /* get/set my endpoints public key */
-#define SCTP_SET_AUTH_SECRET            0x00000022  /* get/set my shared secret */
-#define SCTP_SET_AUTH_CHUNKS            0x00000023  /* specify what chunks you want authenticated,
-						     * the system may have additional requirments 
+#define SCTP_PEER_PUBLIC_KEY            0x00000100 /* get the peers public key */
+#define SCTP_MY_PUBLIC_KEY              0x00000101 /* get/set my endpoints public key */
+#define SCTP_SET_AUTH_SECRET            0x00000102 /* get/set my shared secret */
+#define SCTP_SET_AUTH_CHUNKS            0x00000103/* specify what chunks you want 
+						    * the system may have additional requirments 
 						     * as well. I.e. probably ASCONF/ASCONF-ACK no matter
 						     * if you want it or not.
 						     */
-/* Other debug items */
-#define SCTP_GET_NONCE_VALUES           0x00000024
-
-
 /* Debug things that need to be purged */
 #define SCTP_SET_INITIAL_DBG_SEQ	0x00001f00
 #define SCTP_RESET_PEGS                 0x00002000
